--- a/index.css
+++ b/index.css
@@ -111,6 +111,7 @@ body {
     display: flex;
     float: none;
     justify-content: center;
+    padding-bottom: 1px;
   }
   .fas {
     margin: 5px 20px;
@@ -151,13 +152,18 @@ body {
     background-color: #1c2a47cb;
   }
   #header-of-page > a {
-    font-size: 35px;
-    text-align: right;
-    padding-right: 20px;
+    font-size: 30px;
+    text-align: center;
+    margin-right: 50px;
+    padding-right: 0px;
+    width: 100%;
+    white-space: pre-wrap;
   }
   .fas {
     float: none;
-    font-size: 60px;
+    font-size: 2em;
+    margin-left: 60px;
+    margin-right: 0;
   }
   #nav-bar > ul {
     background-color: #1c2a47cb;
@@ -213,7 +219,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px;
+    padding: 15px;
     height: 50px;
     border-radius: 0;
   }
@@ -244,8 +250,8 @@ body {
   position: relative;
   display: block;
   width: 100%;
-  min-height: 640px;
   max-height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
   margin: 0 auto;
@@ -329,9 +335,6 @@ body {
 /* --------------------------@media for form part--------------------------------- */
 @media screen and (max-width: 950px) {
   #form {
-    width: 100%;
-    /* min-height: 600px; */
-    max-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
